# katlang

./: .gitignore  Cargo.toml  LICENSE  README.md  examples.md  spec.md
src/: interpreter.rs  main.rs  parser.rs  spec.rs  term.rs
