[package]
name = "catlang"
version = "0.1.0"
authors = ["Jani Mustonen <janijohannes@kapsi.fi>"]

[dependencies]
itertools = "0.7.8"
clap = "2.32.0"
termion = "*"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false
